Bug 1576163 - Prevent line shifting from inline preview r=jlast
Differential Revision: https://phabricator.services.mozilla.com/D44687

UltraBlame original commit: 7b5564dbb51118beaf68d3bb81809bb6b599600d

--- a/devtools/client/debugger/src/components/Editor/Editor.css
+++ b/devtools/client/debugger/src/components/Editor/Editor.css
@@ -179,6 +179,22 @@ none
 ;
 }
 .
+CodeMirror
+-
+linewidget
+{
+padding
+:
+0
+;
+display
+:
+flow
+-
+root
+;
+}
+.
 editor
 -
 wrapper
